// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dimension renders component 1`] = `
<li
  className="dimension"
>
  <div
    className="main"
    style={
      Object {
        "background": "rgba(0,0,0,0.085)",
        "borderLeft": "5px solid #000000",
      }
    }
  >
    <div
      className="side"
    >
      <p
        className="icon"
      >
        <img
          alt=""
          src="https://cdn.traitify.com/icons/big-five/dimensions/black/agreeableness.png"
        />
      </p>
    </div>
    <div
      className="content"
    >
      <h2
        className="title"
      >
        Agreeableness
         
        <span
          style={
            Object {
              "color": "#000000",
            }
          }
        >
          |
        </span>
         
        6
         - 
        Medium
      </h2>
      <p
        className="description"
      >
        Influencing people (Agreeableness) concerns the way someone balances their emotional understanding of other people, and their respect for differing viewpoints, with the style in which they try to influence or negotiate with them.
      </p>
      <p
        className="triggerButton"
      >
        <button
          className="trigger"
          onClick={[Function]}
          style={
            Object {
              "background": "rgba(0,0,0,0.3)",
            }
          }
          type="button"
        />
      </p>
    </div>
  </div>
</li>
`;

exports[`Dimension with index of 0 shows content by default 1`] = `
<li
  className="dimension"
>
  <div
    className="main"
    style={
      Object {
        "background": "rgba(0,0,0,0.085)",
        "borderLeft": "5px solid #000000",
      }
    }
  >
    <div
      className="side"
    >
      <p
        className="icon"
      >
        <img
          alt=""
          src="https://cdn.traitify.com/icons/big-five/dimensions/black/agreeableness.png"
        />
      </p>
    </div>
    <div
      className="content"
    >
      <h2
        className="title"
      >
        Agreeableness
         
        <span
          style={
            Object {
              "color": "#000000",
            }
          }
        >
          |
        </span>
         
        6
         - 
        Medium
      </h2>
      <p
        className="description"
      >
        Influencing people (Agreeableness) concerns the way someone balances their emotional understanding of other people, and their respect for differing viewpoints, with the style in which they try to influence or negotiate with them.
      </p>
      <p
        className="triggerButton"
      >
        <button
          className="trigger"
          onClick={[Function]}
          style={
            Object {
              "background": "rgba(0,0,0,0.3)",
            }
          }
          type="button"
        />
      </p>
    </div>
  </div>
  <div
    className="details"
  >
    <div
      className="content"
      style={
        Object {
          "background": "rgba(0,0,0,0.3)",
        }
      }
    >
      <div
        className="extendedDesc"
      >
        <h3 />
        <p
          className="description"
        >
          Influencing people (Agreeableness) concerns the way someone balances their emotional understanding of other people, and their respect for differing viewpoints, with the style in which they try to influence or negotiate with them.
        </p>
      </div>
      <div
        className="detail"
      >
        <h4
          className="benefits"
        />
        <ul>
          <li>
            Forgiving style
          </li>
          <li>
            Looks for win-win outcome
          </li>
          <li>
            Negotiates with sensitivity
          </li>
          <li>
            Realistic view of others
          </li>
          <li>
            Recognises imperfection 
          </li>
          <li>
            Relational style
          </li>
        </ul>
      </div>
      <div
        className="detail"
      >
        <h4
          className="pitfalls"
        />
        <ul>
          <li>
            May appear too open-minded (to others)
          </li>
          <li>
            May be viewed as a ‘pushover’ by others’
          </li>
          <li>
            May let sympathy get in the way
          </li>
          <li>
            May lose out to very assertive colleagues
          </li>
          <li>
            May not always be objective enough
          </li>
          <li>
            May not go for the optimal personal win
          </li>
        </ul>
      </div>
    </div>
  </div>
</li>
`;

exports[`Dimension with non-zero index hides content by default 1`] = `
<li
  className="dimension"
>
  <div
    className="main"
    style={
      Object {
        "background": "rgba(0,0,0,0.085)",
        "borderLeft": "5px solid #000000",
      }
    }
  >
    <div
      className="side"
    >
      <p
        className="icon"
      >
        <img
          alt=""
          src="https://cdn.traitify.com/icons/big-five/dimensions/black/agreeableness.png"
        />
      </p>
    </div>
    <div
      className="content"
    >
      <h2
        className="title"
      >
        Agreeableness
         
        <span
          style={
            Object {
              "color": "#000000",
            }
          }
        >
          |
        </span>
         
        6
         - 
        Medium
      </h2>
      <p
        className="description"
      >
        Influencing people (Agreeableness) concerns the way someone balances their emotional understanding of other people, and their respect for differing viewpoints, with the style in which they try to influence or negotiate with them.
      </p>
      <p
        className="triggerButton"
      >
        <button
          className="trigger"
          onClick={[Function]}
          style={
            Object {
              "background": "rgba(0,0,0,0.3)",
            }
          }
          type="button"
        />
      </p>
    </div>
  </div>
</li>
`;
